basic chat session creation and p2p setup
a little bit of view logic for chat session creation

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   },
   "homepage": "https://github.com/raz-lior/p2p-collaborate#readme",
   "dependencies": {
+    "body-parser": "^1.16.1",
     "express": "^4.14.1"
   }
 }
