--- a/bower.json
+++ b/bower.json
@@ -22,6 +22,7 @@
   "dependencies": {
     "file-saver": "filesaver#^1.3.3",
     "requirejs": "^2.3.2",
-    "jquery": "^3.1.1"
+    "jquery": "^3.1.1",
+    "peerjs": "^0.3.14"
   }
 }
