--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   "homepage": "https://github.com/raz-lior/p2p-collaborate#readme",
   "dependencies": {
     "body-parser": "^1.16.1",
+    "bower": "^1.8.0",
     "express": "^4.14.1"
   }
 }
